@@ -1,5 +1,10 @@
 2005-04-16  Christophe Fergeau  <teuf@gnome.org>
 
+	* freedesktop.org.xml:
+	* freedesktop.org.xml.in: improved mathematica magic, fixes #2660
+
+2005-04-16  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml.in: added magic for mathematica notebooks
 	* freedesktop.org.xml:
 	* po/Makefile.in.in: updated autogenerated files
